# DX10R

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  build_linux.sh  build_macos.zsh  build_windows.ps1  bump_version.ps1  installer.iss
cmake/: ApplyIPlug2Patch.cmake  SkipDebugAUDeploy.cmake  Version.cmake
docs/: implementation-plan.md
docs/presets/: Bright E.Piano.dx10p  Chiff Organ.dx10p  Chunky Bass.dx10p  Clunk Bass.dx10p  E.Bass.dx10p  E.Piano Pad.dx10p  Funk Clav.dx10p  Fuzzy E.Piano.dx10p  Harmonics.dx10p  Harp.dx10p  Harpsichord.dx10p  Horn.dx10p  Jazz E.Piano.dx10p  Jazz Guitar.dx10p  Koto.dx10p  Log Drum.dx10p  Reed 1.dx10p  Reed 2.dx10p  Scratch.dx10p  Sine Bass.dx10p  Sitar.dx10p  Soft Chimes.dx10p  Space Pad.dx10p  Square Bass.dx10p  Steel Drum.dx10p  Syn Tom.dx10p  Thick Bass.dx10p  Tinkle.dx10p  Trumpet.dx10p  Upright Bass 1.dx10p  Upright Bass 2.dx10p  Violin.dx10p
patches/: iplug2-webview-autofill.patch  iplug2-webview-context-menu.patch
plugin/: CMakeLists.txt  DX10R.cpp  DX10R.h  ParamSpecs.cpp  ParamSpecs.h  ParameterIDs.h  PresetFileDialog.h  PresetFileDialog_mac.mm  PresetFileDialog_win.cpp  SystemClipboard.h  SystemClipboard_mac.mm  SystemClipboard_win.cpp  config.h
plugin/dsp/: Decimator2x.h  FastMath.h  Lfo.h  Simd.h  Voice.h  VoiceManager.cpp  VoiceManager.h
plugin/dsp/effects/: Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  DigitalChorus.cpp  DigitalChorus.h  Distortion.cpp  Distortion.h  EQ3Band.cpp  EQ3Band.h  EffectBase.h  EffectsRack.cpp  EffectsRack.h  Flanger.cpp  Flanger.h  HallCore.cpp  HallCore.h  Phaser.cpp  Phaser.h  PitchChorus.cpp  PitchChorus.h  PlateCore.cpp  PlateCore.h  Reverb.cpp  Reverb.h  ReverbCore.h  RoomCore.cpp  RoomCore.h  StudioChorus.cpp  StudioChorus.h  SynthChorus.cpp  SynthChorus.h
plugin/resources/: DX10R-AAX-Info.plist  DX10R-AU-Info.plist  DX10R-CLAP-Info.plist  DX10R-VST3-Info.plist  DX10R-macOS-Info.plist  main.rc  resource.h
scripts/: gen-factory-presets.mjs
webui/: biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  ui_check.mjs  vite.config.ts
webui/src/: App.tsx  dev-mock.ts  dx10r-effects.ts  dx10r-params.ts  effect-chain-clipboard.ts  effect-params.ts  factory-presets.ts  main.tsx
webui/src/bridge/: iplug-bridge.ts
webui/src/components/: ADSRGraph.tsx  CopyIcon.tsx  EffectIcons.tsx  EffectKnob.tsx  EffectsRack.tsx  HorizontalParameter.tsx  Knob.tsx  PasteIcon.tsx  PresetBar.tsx  Section.tsx
webui/src/hooks/: useFineAdjustPointer.ts  useNumberInputAdjust.ts
webui/src/store/: paramStore.ts
webui/src/theme/: index.ts  surfaces.ts
webui/src/types/: iplug.d.ts
